# RoomJ_CodingTest_Repo

./: CMakeLists.txt
Concepts/Algorithm/: gcd_lcm.md  sort.md
Concepts/Basics/: arithmetic_operators.md  char_and_digits.md  comparison_operators.md  for_loop.md  if_else.md  reference_and_pointer.md
Concepts/STL/: map_basics.md  vector_basics.md
Programmers/Level0/001_Count_Duplicates/: CMakeLists.txt  concept.cpp  solution.cpp
Programmers/Level0/002_Taller_Than_Mussuki/: CMakeLists.txt  solution.cpp
Programmers/Level0/003_Sum_Of_Two_Numbers/: CMakeLists.txt  concept.cpp  solution.cpp
Programmers/Level0/004_Difference_Of_Two_Numbers/: CMakeLists.txt  concept.cpp  solution.cpp
Programmers/Level0/005_Product_Of_Two_Numbers/: CMakeLists.txt  concept.cpp  solution.cpp
Programmers/Level0/006_Quotient/: CMakeLists.txt  concept.cpp  solution.cpp
Programmers/Level0/007_Division_And_Truncation/: CMakeLists.txt  concept.cpp  solution.cpp
Programmers/Level0/008_Compare_Numbers/: CMakeLists.txt  concept.cpp  solution.cpp
Programmers/Level0/009_Fraction_Addition/: CMakeLists.txt  concept.cpp  solution.cpp
Programmers/Level0/010_Double_Array/: CMakeLists.txt  concept.cpp  solution.cpp
Programmers/Level0/011_Remainder/: CMakeLists.txt  solution.cpp
Programmers/Level0/012_Median/: CMakeLists.txt  concept.cpp  solution.cpp
Programmers/Level0/013_Mode/: CMakeLists.txt  concept.cpp  solution.cpp
Programmers/Level0/014_No_Even_Numbers/: CMakeLists.txt  solution.cpp
Programmers/Level0/015_Pizza_1/: CMakeLists.txt  concept.cpp  solution.cpp
Programmers/Level0/016_Pizza_2/: CMakeLists.txt  concept.cpp  solution.cpp
Programmers/Level0/017_Pizza_3/: CMakeLists.txt  solution.cpp
Programmers/Level0/018_Average/: CMakeLists.txt  concept.cpp  solution.cpp
Programmers/Level0/019_Clothing_Discount/: CMakeLists.txt  solution.cpp
Programmers/Level0/020_Iced_Americano/: CMakeLists.txt  solution.cpp
Programmers/Level0/021_Age_Output/: CMakeLists.txt  solution.cpp
Programmers/Level0/022_Reverse_Array/: CMakeLists.txt  solution.cpp
Programmers/Level0/023_Reverse_String/: CMakeLists.txt  concept.cpp  solution.cpp
Programmers/Level0/024_Right_Triangle/: CMakeLists.txt  concept.cpp  solution.cpp
Programmers/Level0/025_Even_Odd_Count/: CMakeLists.txt  solution.cpp
Programmers/Level0/026_Repeat_Characters/: CMakeLists.txt  solution.cpp
Programmers/Level0/027_Remove_Character/: CMakeLists.txt  solution.cpp
Programmers/Level0/028_Protractor/: CMakeLists.txt  solution.cpp
Programmers/Level0/029_Lamb_Skewers/: CMakeLists.txt  solution.cpp
Programmers/Level0/030_Sum_Of_Evens/: CMakeLists.txt  solution.cpp
Programmers/Level0/031_Slice_Array/: CMakeLists.txt  concept.cpp  solution.cpp
Programmers/Level0/032_Alien_Age/: CMakeLists.txt  concept.cpp  solution.cpp
