cmake_minimum_required(VERSION 3.20)
project(RoomJ_CodingTest_Repo)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(Programmers/Level0/001_Count_Duplicates)
add_subdirectory(Programmers/Level0/002_Taller_Than_Mussuki)
add_subdirectory(Programmers/Level0/003_Sum_Of_Two_Numbers)
add_subdirectory(Programmers/Level0/004_Difference_Of_Two_Numbers)
add_subdirectory(Programmers/Level0/005_Product_Of_Two_Numbers)
add_subdirectory(Programmers/Level0/006_Quotient)
add_subdirectory(Programmers/Level0/007_Division_And_Truncation)
add_subdirectory(Programmers/Level0/008_Compare_Numbers)
add_subdirectory(Programmers/Level0/009_Fraction_Addition)
add_subdirectory(Programmers/Level0/010_Double_Array)
add_subdirectory(Programmers/Level0/011_Remainder)
add_subdirectory(Programmers/Level0/012_Median)
add_subdirectory(Programmers/Level0/013_Mode)
add_subdirectory(Programmers/Level0/014_No_Even_Numbers)
add_subdirectory(Programmers/Level0/015_Pizza_1)
add_subdirectory(Programmers/Level0/016_Pizza_2)
add_subdirectory(Programmers/Level0/017_Pizza_3)
add_subdirectory(Programmers/Level0/018_Average)
add_subdirectory(Programmers/Level0/019_Clothing_Discount)
add_subdirectory(Programmers/Level0/020_Iced_Americano)
add_subdirectory(Programmers/Level0/021_Age_Output)
add_subdirectory(Programmers/Level0/022_Reverse_Array)
add_subdirectory(Programmers/Level0/023_Reverse_String)
add_subdirectory(Programmers/Level0/024_Right_Triangle)
add_subdirectory(Programmers/Level0/025_Even_Odd_Count)
add_subdirectory(Programmers/Level0/026_Repeat_Characters)
add_subdirectory(Programmers/Level0/027_Remove_Character)
add_subdirectory(Programmers/Level0/028_Protractor)
add_subdirectory(Programmers/Level0/029_Lamb_Skewers)
add_subdirectory(Programmers/Level0/030_Sum_Of_Evens)
add_subdirectory(Programmers/Level0/031_Slice_Array)
add_subdirectory(Programmers/Level0/032_Alien_Age)

